--- a/style.css
+++ b/style.css
@@ -54,6 +54,12 @@ header p, h1 {
     font-family: 'Montserrat', sans-serif;
 }
 
+header h1 {
+    position: absolute;
+    top: 150px;
+    left: 380px;
+}
+
 header p {
     color: var(--dark-color);
     position: absolute;
@@ -397,6 +403,13 @@ header p, h1 {
     font-family: 'Montserrat', sans-serif;
     font-size: 19px;
   }
+
+  header h1 {
+    position: absolute;
+    top: 150px;
+    left: 380px;
+}
+
   header p {
     color: var(--dark-color);
     position: absolute;
